--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "mongoose": "^6.9.1",
+    "mongoose-paginate-v2": "^1.7.1",
     "next": "13.1.6",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
