--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.9.1",
     "mongoose-paginate-v2": "^1.7.1",
     "next": "13.1.6",
     "next-connect": "^0.13.0",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
